[gd_scene load_steps=25 format=2]

[ext_resource path="res://Static/Resources/Fonts/Resources/Title_Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://Static/Resources/Fonts/Resources/Medium_Font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Static/Resources/Fonts/Resources/Medium_Font_Cursive.tres" type="DynamicFont" id=3]
[ext_resource path="res://Static/Resources/Textures/Particles/Raindrop.png" type="Texture" id=4]
[ext_resource path="res://Static/Resources/Sounds/Ambient/rain-and-thunder-nature-sounds-7803.mp3" type="AudioStream" id=5]
[ext_resource path="res://Static/Resources/Sounds/Ambient/lightning-storm-6077.mp3" type="AudioStream" id=6]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_4.png" type="Texture" id=7]
[ext_resource path="res://Interfaces/Scripts/MainMenu.gd" type="Script" id=8]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_0.png" type="Texture" id=9]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_5.png" type="Texture" id=10]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_1.png" type="Texture" id=11]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_2.png" type="Texture" id=12]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_3.png" type="Texture" id=13]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_6.png" type="Texture" id=14]
[ext_resource path="res://Static/Resources/Backgrounds/MainMenu/BG_Animation/BG_7.png" type="Texture" id=15]
[ext_resource path="res://Static/Resources/Art Assets/Studies/Title_Mid.png" type="Texture" id=16]
[ext_resource path="res://Static/Resources/Sounds/Music/AmongShades.mp3" type="AudioStream" id=17]

[sub_resource type="AnimatedTexture" id=1]
flags = 4
frames = 8
fps = 8.0
frame_0/texture = ExtResource( 9 )
frame_1/texture = ExtResource( 11 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0
frame_4/texture = ExtResource( 7 )
frame_4/delay_sec = 0.0
frame_5/texture = ExtResource( 10 )
frame_5/delay_sec = 0.0
frame_6/texture = ExtResource( 14 )
frame_6/delay_sec = 0.0
frame_7/texture = ExtResource( 15 )
frame_7/delay_sec = 0.0

[sub_resource type="StyleBoxTexture" id=2]
texture = SubResource( 1 )
region_rect = Rect2( 0, 0, 1280, 720 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 0.545455 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.25
emission_shape = 2
emission_box_extents = Vector3( 1500, 1, 1 )
flag_disable_z = true
direction = Vector3( 1, 1, 0 )
spread = 15.0
gravity = Vector3( 0, 980, 0 )
initial_velocity = 400.0
initial_velocity_random = 0.2
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 1.0
linear_accel_random = 0.13
scale_curve = SubResource( 5 )
color = Color( 0.862745, 0.878431, 1, 1 )
hue_variation = 0.01
hue_variation_random = 0.5

[sub_resource type="Animation" id=7]
resource_name = "fade_out"
step = 0.05
tracks/0/type = "bezier"
tracks/0/path = NodePath("Fader:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Fader:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Fader:color:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("AmbientSoundPlayer:volume_db")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( -10, -0.25, 0, 0.25, 0, -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}
tracks/4/type = "value"
tracks/4/path = NodePath("Fader:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "bezier"
tracks/5/path = NodePath("LightningSoundPlayer:volume_db")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}
tracks/6/type = "bezier"
tracks/6/path = NodePath("BackgroundMusicPlayer:volume_db")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"points": PoolRealArray( -10, -0.25, 0, 0.25, 0, -25, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.75 )
}

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="StartScreen" type="Panel" parent="."]
modulate = Color( 0.792157, 0.792157, 0.792157, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="StartScreen"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = -30.0
text = "Wizardly Duels v 0.0.1"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="StartScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -158.5
margin_right = 300.0
margin_bottom = 158.5
rect_min_size = Vector2( 600, 300 )
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleContainer" type="MarginContainer" parent="StartScreen/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -568.5
margin_top = -53.5
margin_right = 568.5
margin_bottom = 263.5
rect_min_size = Vector2( 0, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="StartScreen/Panel/TitleContainer"]
visible = false
margin_top = 128.0
margin_right = 1137.0
margin_bottom = 188.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.745098 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
custom_fonts/font = ExtResource( 1 )
text = "Dueling Wizards"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="StartScreen/Panel/TitleContainer"]
margin_right = 1137.0
margin_bottom = 317.0
texture = ExtResource( 16 )
expand = true
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="StartScreen/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -219.5
margin_top = 191.0
margin_right = 219.5
margin_bottom = 357.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="StartScreen/Panel/VBoxContainer"]
margin_top = 23.0
margin_right = 439.0
margin_bottom = 143.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputFields" type="VBoxContainer" parent="StartScreen/Panel/VBoxContainer/Menu"]
margin_right = 439.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 80 )
alignment = 1

[node name="PlayerNameInputField" type="LineEdit" parent="StartScreen/Panel/VBoxContainer/Menu/InputFields"]
margin_top = 13.0
margin_right = 439.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 2 )
max_length = 16
placeholder_text = "Summoner name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IPAddressInputField" type="LineEdit" parent="StartScreen/Panel/VBoxContainer/Menu/InputFields"]
margin_top = 42.0
margin_right = 439.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
placeholder_text = "Ip address"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputButtons" type="HBoxContainer" parent="StartScreen/Panel/VBoxContainer/Menu"]
margin_top = 84.0
margin_right = 439.0
margin_bottom = 120.0
alignment = 1

[node name="Create" type="Button" parent="StartScreen/Panel/VBoxContainer/Menu/InputButtons"]
margin_left = 45.0
margin_right = 237.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
text = "Create game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="StartScreen/Panel/VBoxContainer/Menu/InputButtons"]
margin_left = 241.0
margin_right = 393.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
disabled = true
text = "Join game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGameButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -154.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 2 )
text = "Quit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RainEffect" type="Particles2D" parent="."]
modulate = Color( 1, 1, 1, 0.611765 )
position = Vector2( 693.611, -98.4827 )
amount = 5000
lifetime = 1.5
preprocess = 3.0
randomness = 0.72
visibility_rect = Rect2( 0, 0, 0, 200 )
process_material = SubResource( 6 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="LightningEffect" type="CanvasModulate" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="LightningSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -5.0

[node name="AmbientSoundPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )
volume_db = 5.0
autoplay = true

[node name="Fader" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_out = SubResource( 7 )

[connection signal="pressed" from="StartScreen/Panel/VBoxContainer/Menu/InputButtons/Create" to="." method="_on_Create_pressed"]
[connection signal="pressed" from="StartScreen/Panel/VBoxContainer/Menu/InputButtons/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="ExitGameButton" to="." method="_on_ExitGameButton_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
